sanitize imports